--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 	<title>BOOZ ALLEN HAMILTON</title>
-	<!--<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-select.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -111,10 +110,6 @@
 										<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
 									</div>
 
-									
-
-
-
 								</div>
 							</nav>
 						</div>
@@ -142,8 +137,8 @@
 				<div class="primary-banner-center-box">
 					<div class="container-fluid">
 						<div class="row">
-							<div class="col-sm-12 text-center">
-								<h1>Digital Transformation</h1>
+							<div class="col-sm-12 text-center bookcover">
+								<h1>Digital <br>Transformation</h1>
 								<p class="subhead">A Playbook For The Intelligence Community (IC)</p>
 							</div>
 						</div>
@@ -153,8 +148,21 @@
 			</section>
 			<!-- /primary-banner -->
 
+			<!-- Download Section -->
+			<section id="download" class="content-section text-center">
+				<div class="intro-section">
+					<div class="container">
+						<div class="col-lg-8 col-lg-offset-2 intro">
+							<h2>About This Playbook</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in ex bibendum.</p>
+							<a href="#">Why Digital Transformation</a>
+						</div>
+					</div>
+				</div>
+			</section>
 
-			<!-- Portfolio -->
+
+			<!-- First Chapter Row  -->
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
 				<div class="row">
@@ -182,12 +190,70 @@
 						</div>
 					</div>
 				</div>	
-
-
-
 			</section> 
-			<!-- / Portfolio -->
+			<!-- / First Chapter Row -->
 
+			<!-- Second Chapter Row  -->
+			<section class="section portfolio" id="chapters">
+				<div id="portfolio-anchor"></div>
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter3">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 3</p>
+									<h3>Digital Transformation In The Cloud</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter4">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 4</p>
+									<h3>Digital Transformation From Traditional IT</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</section> 
+			<!-- / Second Chapter Row -->
+
+			<!-- Third Chapter Row  -->
+			<section class="section portfolio" id="chapters">
+				<div id="portfolio-anchor"></div>
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter5">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 5</p>
+									<h3>Digital Ready Workforce</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter6">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 6</p>
+									<h3>Modern Digitl Operations</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</section> 
+			<!-- / Third Chapter Row -->
 
 
 		</main><!-- / main-->
