--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>Accent</title>
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<title>BOOZ ALLEN HAMILTON</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-select.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -77,69 +76,41 @@
 							</button>
 
 							<nav class="collapse collapsing navbar-collapse">
-								<ul class="nav navbar-nav navbar-center">
-									<li class="slide-link">
-										<a href="#primary-banner" class="default-hovered">Home</a>
-									</li>
-									<li class="slide-link">
-										<a href="#how-about-video" class="default-hovered">How About Video</a>
-									</li>
-
-									<li class="slide-link">
-										<a href="#about-us" class="default-hovered">About</a>
-									</li>
-
-									<li class="slide-link">
-										<a href="#team" class="default-hovered">Team</a>
-									</li>
-									<li class="slide-link">
-										<a href="#portfolio" class="default-hovered">Portfolio</a>
-									</li>
-
-									<li class="slide-link">
-										<a href="#review" class="default-hovered">Our Clients</a>
-									</li>
-
-									<li class="slide-link">
-										<a href="#fan" class="default-hovered">SOME FUN FACTS</a>
-									</li>
-
-									<li class="slide-link">
-										<a href="#contact" class="default-hovered">Contact</a>
-									</li>
-
-									<li class="parent">
-										<a href="#">Pages</a>
-										<ul class="sub">
-											<li><a href="sections.html">Sections</a></li>
-											<li class="parent">
-												<a href="#">Demo pages</a>
-												<ul class="sub">
-													<li><a href="demo-1.html">Demo 1</a></li>
-													<li><a href="demo-2.html">Demo 2</a></li>
-													<li><a href="demo-3.html">Demo 3</a></li>
-													<li><a href="demo-4.html">Demo 4</a></li>
-													<li><a href="demo-5.html">Demo 5</a></li>
-													<li><a href="demo-6.html">Demo 6</a></li>
-													<li><a href="demo-7.html">Demo 7</a></li>
-													<li><a href="demo-8.html">Demo 8</a></li>
-													<li><a href="demo-9.html">Demo 9</a></li>
-													<li><a href="demo-10.html">Demo 10</a></li>
-													<li><a href="demo-11.html">Demo 11</a></li>
-													<li><a href="blog-masonry.html">Blog Masonry</a></li>
-													<li><a href="blog-list.html">Blog List Left Sidebar</a></li>
-													<li><a href="blog-list-right.html">Blog List Right Sidebar</a></li>
-												</ul>	
-											</li>
-											<li><a href="404.html">404</a></li>	
-											<li><a href="login.html">Login</a></li>	
-											<li><a href="typography.html">Typography</a></li>	
-										</ul>
-									</li>
-									<li class="widget-box visible-xs"></li>
+								<div class="nav navbar-nav navbar-center">
 
 
-								</ul>
+									
+									<div class="toc-wrap">
+										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
+									</div>
+
+									<div class="toc-wrap">
+										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
+									</div>
+
+									<div class="toc-wrap">
+										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
+									</div>
+
+									<div class="toc-wrap">
+										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
+									</div>
+
+									<div class="toc-wrap">
+										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
+									</div>
+
+									<div class="toc-wrap">
+										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
+									</div>
+
+								</div>
 							</nav>
 						</div>
 					</div>
@@ -166,8 +137,8 @@
 				<div class="primary-banner-center-box">
 					<div class="container-fluid">
 						<div class="row">
-							<div class="col-sm-12 text-center">
-								<h1>Digital Transformation33</h1>
+							<div class="col-sm-12 text-center bookcover">
+								<h1>Digital <br>Transformation</h1>
 								<p class="subhead">A Playbook For The Intelligence Community (IC)</p>
 							</div>
 						</div>
@@ -177,41 +148,112 @@
 			</section>
 			<!-- /primary-banner -->
 
+			<!-- Download Section -->
+			<section id="download" class="content-section text-center">
+				<div class="intro-section">
+					<div class="container">
+						<div class="col-lg-8 col-lg-offset-2 intro">
+							<h2>About This Playbook</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in ex bibendum.</p>
+							<a href="#">Why Digital Transformation</a>
+						</div>
+					</div>
+				</div>
+			</section>
 
-			<!-- Portfolio -->
+
+			<!-- First Chapter Row  -->
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
 				<div class="row">
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 						<div class="chapter1">
-								<div class="content">
-									<div class="articles">
-										<p>Chapter 1</p>
-										<h3>What is Digital Transformation</h3>
-										<a href="#">Read More</a>
-									</div>
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 1</p>
+									<h3>What is Digital Transformation</h3>
+									<a href="#">Read More</a>
 								</div>
+							</div>
 						</div>
 					</div>
 
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 						<div class="chapter2">
-								<div class="content">
-									<div class="articles">
-										<p>Chapter 2</p>
-										<h3>Enterprise Modernization</h3>
-										<a href="#">Read More</a>
-									</div>
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 2</p>
+									<h3>Enterprise Modernization</h3>
+									<a href="#">Read More</a>
 								</div>
+							</div>
 						</div>
 					</div>
 				</div>	
-
-
-
 			</section> 
-			<!-- / Portfolio -->
+			<!-- / First Chapter Row -->
 
+			<!-- Second Chapter Row  -->
+			<section class="section portfolio" id="chapters">
+				<div id="portfolio-anchor"></div>
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter3">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 3</p>
+									<h3>Digital Transformation In The Cloud</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter4">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 4</p>
+									<h3>Digital Transformation From Traditional IT</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</section> 
+			<!-- / Second Chapter Row -->
+
+			<!-- Third Chapter Row  -->
+			<section class="section portfolio" id="chapters">
+				<div id="portfolio-anchor"></div>
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter5">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 5</p>
+									<h3>Digital Ready Workforce</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+						<div class="chapter6">
+							<div class="content">
+								<div class="articles">
+									<p>Chapter 6</p>
+									<h3>Modern Digitl Operations</h3>
+									<a href="#">Read More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</section> 
+			<!-- / Third Chapter Row -->
 
 
 		</main><!-- / main-->
