--- a/digital.html
+++ b/digital.html
@@ -8,8 +8,8 @@
 	<title>BOOZ ALLEN HAMILTON</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-select.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Raleway:400,600,300,800,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/dzsparallaxer.css">
@@ -131,7 +131,7 @@
 			</div>
 
 			<!-- primary-banner -->
-			<section class="section heightPrimaryBanner primary-banner" id="primary-banner">
+			<section class="section primary-banner" id="article-banner">
 				<div class="background">
 					<div class="layer" style="width:120%; height: 120%; left: -10%; top:-10%; background-image: url(images/background/8.jpg);"></div>
 				</div>
@@ -140,8 +140,8 @@
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-sm-12 text-center bookcover">
-								<h1>Digital <br>Transformation</h1>
-								<p class="subhead">A Playbook For The Intelligence Community (IC)</p>
+								<span>Chapter 1</span>
+								<p class="subhead">What is Digital Transformation?</p>
 							</div>
 						</div>
 					</div>
@@ -150,113 +150,28 @@
 			</section>
 			<!-- /primary-banner -->
 
-			<!-- Download Section -->
+			<!-- CHAPTER 1 -->
 			<section id="download" class="content-section text-center">
 				<div class="intro-section">
 					<div class="container">
-						<div class="col-lg-8 col-lg-offset-2 intro">
-							<h2>About This Playbook</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in ex bibendum.</p>
-							<a href="#">Why Digital Transformation</a>
+						<div class="col-lg-8 col-lg-offset-2 intro" id="article-wrap">
+							<p class="lead">Organizational investment in technology requires strategic adoption of the right tool, applied to the right use case, and implemented with flexibility in order to rapidly adopt newer capabilities that offer improved work experiences and efficiencies.</p>
+							<p>Today, users are riding a continuous technology wave driven by a desire to improve user experiences and expect systems that bear more functionality and intelligence as more operations move to the cloud. The antiquated models based on rigid processes supported by legacy IT environments now limit the ability for an enterprise to respond in today’s rapidly changing environment.</p>
+
+							<p>Digital Transformation starts by understanding the implications of social, mobile, analytic, cloud technologies and user experience (SMAC-X) and exploring the requirements of the enterprise to get more work done and at lower costs than traditional operating models. Agencies are using digital advances offered by advanced web applications, cloud-based analytics, mobile solutions, and smart devices to gain operational efficiencies.</p>
+
+							<p>With the advent of these digital capabilities and the continual evolution of newer digital ecosystems, digital transformation seeks to eliminate stove-piped capabilities and simplify the volume, redundancy, and complexity of distributed architectures that are closed and proprietary through modernization of the IT portfolio with technologies that increase capabilities through open architectures that promote interoperability, open source components that maximize reusability, open standards that foster cohesive development, open communities that fosters sharing and innovation, and open data that make information available to users.</p>
+
+							<p>Digital transformation is also a profound and continuous evolution of business activities, processes, and competencies that enhance an organization’s ability to adapt to change. It is a journey that uses disruptive digital technologies as enablers to innovation with faster impact and with flexibility to quickly change when better, more efficient capabilities become available. As digital capabilities are introduced, business activities shift to become fast, virtual, and flexible. Interactions, tasks, and work processes are undergoing significant transformations as new technology allows information to be created, exchanged, secured, and processed in very different ways.</p>
+
+							<p>On-demand engagement, heightened user experience, remote data access, and cloudbased analytics are the new capability standards which organizations must begin to transform their workforce and operations into to become effective digital workplaces.</p>
+
+							<p>To accommodate these changes, digital transformation also demands innovative organizational strategies, including how to innovate and differentiate from other organizations. These strategies should include organizational change to support new business objectives and the integration of digital experts as key enablers to develop purpose built solutions, monitor the new digital trends, and present fresh innovations for adoption.</p>
 						</div>
 					</div>
 				</div>
 			</section>
-
-
-			<!-- First Chapter Row  -->
-			<section class="section portfolio" id="chapters">
-				<div id="portfolio-anchor"></div>
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter1">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 1</p>
-									<h3>What is Digital Transformation</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter2">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 2</p>
-									<h3>Enterprise Modernization</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</section> 
-			<!-- / First Chapter Row -->
-
-			<!-- Second Chapter Row  -->
-			<section class="section portfolio" id="chapters">
-				<div id="portfolio-anchor"></div>
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter3">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 3</p>
-									<h3>Digital Transformation In The Cloud</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter4">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 4</p>
-									<h3>Digital Transformation From Traditional IT</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</section> 
-			<!-- / Second Chapter Row -->
-
-			<!-- Third Chapter Row  -->
-			<section class="section portfolio" id="chapters">
-				<div id="portfolio-anchor"></div>
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter5">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 5</p>
-									<h3>Digital Ready Workforce</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter6">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 6</p>
-									<h3>Modern Digitl Operations</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</section> 
-			<!-- / Third Chapter Row -->
-
+			<!-- CHAPTER 1 -->
 
 		</main><!-- / main-->
 
