--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>BOOZ ALLEN HAMILTON</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-select.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Raleway:400,600,300,800,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/dzsparallaxer.css">
@@ -83,32 +83,32 @@
 
 									
 									<div class="toc-wrap">
-										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<img src="images/toc-chap1.jpg" class="img-responsive pull-left gap-right">
 										<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
 									</div>
 
 									<div class="toc-wrap">
-										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<img src="images/toc-chap2.jpg" class="img-responsive pull-left gap-right">
 										<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
 									</div>
 
 									<div class="toc-wrap">
-										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<img src="images/toc-chap3.jpg" class="img-responsive pull-left gap-right">
 										<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
 									</div>
 
 									<div class="toc-wrap">
-										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<img src="images/toc-chap4.jpg" class="img-responsive pull-left gap-right">
 										<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
 									</div>
 
 									<div class="toc-wrap">
-										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<img src="images/toc-chap5.jpg" class="img-responsive pull-left gap-right">
 										<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
 									</div>
 
 									<div class="toc-wrap">
-										<img src="images/toc/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+										<img src="images/toc-chap6.jpg" class="img-responsive pull-left gap-right">
 										<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
 									</div>
 
@@ -133,7 +133,7 @@
 			<!-- primary-banner -->
 			<section class="section heightPrimaryBanner primary-banner" id="primary-banner">
 				<div class="background">
-					<div class="layer" style="width:120%; height: 120%; left: -10%; top:-10%; background-image: url(images/background/8.jpg);"></div>
+					<div class="layer" style="width:120%; height: 120%; opacity: 0.4; left: -10%; top:-10%; background-image: url(images/playbook-cover.jpg);"></div>
 				</div>
 
 				<div class="primary-banner-center-box">
@@ -141,29 +141,29 @@
 						<div class="row">
 							<div class="col-sm-12 text-center bookcover">
 								<h1>Digital <br>Transformation</h1>
-								<p class="subhead">A Playbook For The Intelligence Community (IC)</p>
+								<p>A Playbook For The Intelligence Community (IC)</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="next-sections" data-next-box="#chapters">Scroll Down<i class="fa fa-angle-down"></i></div>
+				<div class="next-sections" data-next-box="#introduction">Scroll Down<i class="fa fa-angle-down"></i></div>
 			</section>
 			<!-- /primary-banner -->
 
 			<!-- Download Section -->
-			<section id="download" class="content-section text-center">
+			<section id="introduction" class="content-section text-center">
 				<div class="intro-section">
 					<div class="container">
 						<div class="col-lg-8 col-lg-offset-2 intro">
-							<h2>About This Playbook</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in ex bibendum.</p>
-							<a href="#">Why Digital Transformation</a>
+							<h4>Introduction</h4>
+							<p>With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology.</p>
+							<a href="#">Read More</a>
 						</div>
 					</div>
 				</div>
 			</section>
 
-
+			<div class="chapter-wrap">
 			<!-- First Chapter Row  -->
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
@@ -256,7 +256,7 @@
 				</div>	
 			</section> 
 			<!-- / Third Chapter Row -->
-
+		</div><!-- / Chapter Wrap -->
 
 		</main><!-- / main-->
 
