--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<div class="container">
 						<div class="col-lg-8 col-lg-offset-2 intro">
 							<h4>Introduction</h4>
-							<p>With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology.</p>
+							<p class="lead">With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology.</p>
 							<a href="#">Read More</a>
 						</div>
 					</div>
