--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
+			<img src="images/bah-logo.png">
 		</div>
 
 
