--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-			
+
 
 	</head>
 	<body>
@@ -83,45 +83,45 @@
 
 
 									<a href="chapter1.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap1.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<img src="images/toc-chap1.jpg" class="img-responsive pull-left gap-right">
+											<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter2.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap2.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<img src="images/toc-chap2.jpg" class="img-responsive pull-left gap-right">
+											<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter3.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap3.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<img src="images/toc-chap3.jpg" class="img-responsive pull-left gap-right">
+											<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter4.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap4.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<img src="images/toc-chap4.jpg" class="img-responsive pull-left gap-right">
+											<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter5.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap5.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<img src="images/toc-chap5.jpg" class="img-responsive pull-left gap-right">
+											<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter6.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap6.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<img src="images/toc-chap6.jpg" class="img-responsive pull-left gap-right">
+											<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
+										</div>
 									</a>
 
 								</div>
@@ -175,10 +175,11 @@
 				</div>
 			</section>
 
-			<div class="chapter-wrap">
+
 			<!-- First Chapter Row  -->
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
+				<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 						<div class="chapter1">
@@ -204,71 +205,75 @@
 						</div>
 					</div>
 				</div>	
+			</div>
 			</section> 
 			<!-- / First Chapter Row -->
 
 			<!-- Second Chapter Row  -->
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter3">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 3</p>
-									<h3>Digital Transformation In The Cloud</h3>
-									<a href="#">Read More</a>
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+							<div class="chapter3">
+								<div class="content">
+									<div class="articles">
+										<p>Chapter 3</p>
+										<h3>Digital Transformation In The Cloud</h3>
+										<a href="#">Read More</a>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter4">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 4</p>
-									<h3>Digital Transformation From Traditional IT</h3>
-									<a href="#">Read More</a>
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+							<div class="chapter4">
+								<div class="content">
+									<div class="articles">
+										<p>Chapter 4</p>
+										<h3>Digital Transformation From Traditional IT</h3>
+										<a href="#">Read More</a>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>	
-			</section> 
-			<!-- / Second Chapter Row -->
+					</div>	
+				</section> 
+				<!-- / Second Chapter Row -->
 
-			<!-- Third Chapter Row  -->
-			<section class="section portfolio" id="chapters">
-				<div id="portfolio-anchor"></div>
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter5">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 5</p>
-									<h3>Digital Ready Workforce</h3>
-									<a href="#">Read More</a>
+				<!-- Third Chapter Row  -->
+				<section class="section portfolio" id="chapters">
+					<div id="portfolio-anchor"></div>
+					<div class="container-fluid">
+					<div class="row">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+							<div class="chapter5">
+								<div class="content">
+									<div class="articles">
+										<p>Chapter 5</p>
+										<h3>Digital Ready Workforce</h3>
+										<a href="#">Read More</a>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter6">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 6</p>
-									<h3>Modern Digitl Operations</h3>
-									<a href="#">Read More</a>
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
+							<div class="chapter6">
+								<div class="content">
+									<div class="articles">
+										<p>Chapter 6</p>
+										<h3>Modern Digitl Operations</h3>
+										<a href="#">Read More</a>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>	
+					</div>	
+				</div>
 			</section> 
 			<!-- / Third Chapter Row -->
-		</div><!-- / Chapter Wrap -->
 
 		</main><!-- / main-->
 
@@ -283,21 +288,21 @@
 			</div>
 
 		</footer>
-	
+
 
 		<script src="js/jquery-1.11.2.min.js"></script>
 
 		<script type="text/javascript">
-         
-			$(document).ready(function(){                    
-				$(window).scroll(function(){                          
-					if ($(this).scrollTop() > 40) {
-						$('.top-nav-line').addClass('scrolling');
-					} else {
-						$('.top-nav-line').removeClass('scrolling');
-					}
-				});
+
+		$(document).ready(function(){                    
+			$(window).scroll(function(){                          
+				if ($(this).scrollTop() > 40) {
+					$('.top-nav-line').addClass('scrolling');
+				} else {
+					$('.top-nav-line').removeClass('scrolling');
+				}
 			});
+		});
 
 		</script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true"></script>
