Adds “How and Intro”

--- a/introduction.html
+++ b/introduction.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div id="nav-anchor"></div>
 		<div class="container-fluid top-nav-line">
 			<a class="nav-brand" href="index.html"><img src="images/bah-logo.png" width="184" height="21"></a>
@@ -77,6 +77,7 @@
 			</ul>
 		</div><!-- end of top-nav-line -->
 
+		
 
 		<!-- header -->
 		<header>
@@ -95,8 +96,7 @@
 
 							<nav class="collapse collapsing navbar-collapse">
 								<div class="nav navbar-nav navbar-center toc">
-
-
+									
 									<a href="chapter1.html">
 										<div class="toc-wrap">
 											<img src="images/toc-chap1.jpg" class="img-responsive pull-left gap-right">
@@ -158,196 +158,124 @@
 			</div>
 
 			<!-- primary-banner -->
-			<section class="section heightPrimaryBanner primary-banner" id="primary-banner">
+			<section class="section primary-banner" id="article-banner">
 				<div class="background">
-					<div class="layer" style="width:120%; height: 120%; opacity: 0.4; left: -10%; top:-10%; background-image: url(images/playbook-cover.jpg);"></div>
+					<div class="layer" style="width:120%; height: 120%; opacity: 0.4; left: -10%; top:-10%; background-image: url(images/chap3-banner.jpg);"></div>
 				</div>
 
 				<div class="primary-banner-center-box">
 					<div class="container-fluid">
 						<div class="row">
-							<div class="col-sm-12 text-center bookcover">
-								<h1>Digital <br>Transformation</h1>
-								<p>A Playbook For The Intelligence Community (IC)</p>
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center chap-cover">
+								<div class="title-wrap">
+									<h2>Introduction</h2>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="next-sections" data-next-box="#introduction">Scroll Down<i class="fa fa-angle-down"></i></div>
 			</section>
 			<!-- /primary-banner -->
 
-			<!-- Download Section -->
-			<section id="introduction" class="content-section text-center">
-				<div class="intro-section">
-					<div class="container">
-						<div class="col-lg-8 col-lg-offset-2 intro">
-							<h4>Introduction</h4>
-							<p class="lead">With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology.</p>
-							<a href="#">Read More</a>
-						</div>
-					</div>
-				</div>
-			</section>
-
-
-			<!-- First Chapter Row  -->
-			<section class="section portfolio" id="chapters">
-				<div id="portfolio-anchor"></div>
-				<div class="container-fluid">
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter1">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 1</p>
-									<h3>What is Digital Transformation</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-						<div class="chapter2">
-							<div class="content">
-								<div class="articles">
-									<p>Chapter 2</p>
-									<h3>Enterprise Modernization</h3>
-									<a href="#">Read More</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</div>
-			</section> 
-			<!-- / First Chapter Row -->
-
-			<!-- Second Chapter Row  -->
-			<section class="section portfolio" id="chapters">
-				<div id="portfolio-anchor"></div>
-				<div class="container-fluid">
+			<!-- HOW TO USE -->
+			<section class="content-section text-center">
+				<div class="container">
 					<div class="row">
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-							<div class="chapter3">
-								<div class="content">
-									<div class="articles">
-										<p>Chapter 3</p>
-										<h3>Digital Transformation In The Cloud</h3>
-										<a href="#">Read More</a>
-									</div>
-								</div>
-							</div>
-						</div>
+						<div class="col-lg-8 col-lg-offset-2" id="article-wrap">
 
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-							<div class="chapter4">
-								<div class="content">
-									<div class="articles">
-										<p>Chapter 4</p>
-										<h3>Digital Transformation From Traditional IT</h3>
-										<a href="#">Read More</a>
-									</div>
-								</div>
+							<h2>How To Use This Playbook</h2>
+							<p>The intended audience of this playbook will be the Chief Information Officer (CIO), Chief Technology Officer (CTO), Directors, Department Chiefs, and IT Managers as a primer to educate the reader about digital transformation concepts and the considerations and trade space involved with transforming to modern IT environments.</p>
+
+							<p>This primer outlines how the major building blocks described in the subsequent chapters of this playbook intersect to achieve the common goal of modernizing IT infrastructure, sharing and analyzing data and reengineering business processes and culture to bring the enterprise into a stage that will be agile enough to adopt and deploy technologies at a pace that is consistent with the rate of change of today’s technological advances. With this in mind, the goal of this Digital Transformation Playbook will be to lower the barrier to entry for the less technical consumers of technology and level the playing field. Each building block may be leveraged by any organization as they see fit.</p>
+
+							<p>This playbook is divided into 4 logical sections:</p>
+
+							<div class="snippet">
+								<h5>Chapter 1</h5>
+								<p>Explains our viewpoint of the Digital Transformation journey to explain the meaning of digital transformation, the compelling need to transform, the overarching considerations during transformation, and relevance to the Intelligence Community.</p>
 							</div>
+
+							<div class="snippet">
+								<h5>Chapter 2</h5>
+								<p>Defines our portfolio based approach to digital transformation known as our Enterprise Integration framework which serves to help organizations achieve an open, agile stage of IT maturity by addressing the shift toward “on-demand” solutions and maximizing the innovations of shared services, platform standardization &amp; optimization, application rationalization, enterprise cloud capabilities, mobile device integration, and big data analytics.</p>
+							</div>
+
+							<div class="snippet">
+								<h5>Chapter 3</h5>
+								<p>Explains digital transformation in context of the IC’s cloud reference implementation and the value proposition enabled by a cloud services model.</p>
+							</div>
+
+							<div class="snippet">
+								<h5>CHAPTERS 4,5, AND 6</h5>
+								<p>Provides a three-tiered approach for considering people, process, and technology and outlines the best practices, roadmaps, approaches, and techniques that organizations can leverage to help guide critical decisions during the journey to a successful Digital Enterprise.</p>
+							</div>
+						
+						</div>
 						</div>
 					</div>
-					</div>	
-				</section> 
-				<!-- / Second Chapter Row -->
+				</section>
 
-				<!-- Third Chapter Row  -->
-				<section class="section portfolio" id="chapters">
-					<div id="portfolio-anchor"></div>
-					<div class="container-fluid">
+
+		
+
+			</main><!-- / main-->
+
+			<footer>
+
+
+
+				<div class="container-fluid ">
 					<div class="row">
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-							<div class="chapter5">
-								<div class="content">
-									<div class="articles">
-										<p>Chapter 5</p>
-										<h3>Digital Ready Workforce</h3>
-										<a href="#">Read More</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
-							<div class="chapter6">
-								<div class="content">
-									<div class="articles">
-										<p>Chapter 6</p>
-										<h3>Modern Digitl Operations</h3>
-										<a href="#">Read More</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>	
+						<div class="col-sm-12 corp"><span>© Copyright 2017, Booz Allen Hamilton Inc. All Rights Reserved.</span></div>
+					</div>
 				</div>
-			</section> 
-			<!-- / Third Chapter Row -->
 
-		</main><!-- / main-->
-
-		<footer>
+			</footer>
 
 
+			<script src="js/jquery-1.11.2.min.js"></script>
 
-			<div class="container-fluid ">
-				<div class="row">
-					<div class="col-sm-12 corp"><span>© Copyright 2017, Booz Allen Hamilton Inc. All Rights Reserved.</span></div>
-				</div>
-			</div>
+			<script type="text/javascript">
 
-		</footer>
-
-
-		<script src="js/jquery-1.11.2.min.js"></script>
-
-		<script type="text/javascript">
-
-		$(document).ready(function(){                    
-			$(window).scroll(function(){                          
-				if ($(this).scrollTop() > 40) {
-					$('.top-nav-line').addClass('scrolling');
-				} else {
-					$('.top-nav-line').removeClass('scrolling');
-				}
+			$(document).ready(function(){                    
+				$(window).scroll(function(){                          
+					if ($(this).scrollTop() > 40) {
+						$('.top-nav-line').addClass('scrolling');
+					} else {
+						$('.top-nav-line').removeClass('scrolling');
+					}
+				});
 			});
-		});
 
-		</script>
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true"></script>
-		<script src="js/bootstrap.js"></script>
-		<script src="js/bootstrap-select.js"></script>
-		<script src="js/bootstrap-tabcollapse.js"></script> 
-		<script src="js/dzsparallaxer.js"></script> 
-		<script src="js/easy-circle-skill.js"></script>
-		<script src="js/getshar-0.8.0.min.js"></script> 
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/isotope.pkgd.min.js"></script>
-		<script src="js/jquery.appear.js"></script> 
-		<script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
-		<script src="js/jquery.countTo.js"></script> 
-		<script src="js/jquery.easing.1.3.js"></script> 
-		<script src="js/jquery.mCustomScrollbar.js"></script> 
-		<script src="js/jquery.scrollTo.min.js"></script>
-		<script src="js/jquery.singlePageNav.min.js"></script>
-		<script src="js/jquery.textillate.js"></script> 
-		<script src="js/jquery-asPieProgress.js"></script> 
-		<script src="js/masonry.pkgd.js"></script> 
-		<script src="js/masonry.pkgd.min.js"></script> 
-		<script src="js/owl.carousel.js"></script>
-		<script src="js/responsiveslides.js"></script>
-		<script src="js/sliders.js"></script> 
-		<script src="js/small-icons.js"></script> 
-		<script src="js/jquery.textillate.js"></script>
-		<script src="js/assets/jquery.fittext.js"></script>
-		<script src="js/assets/jquery.lettering.js"></script>
-		<script src="js/fancybox/source/jquery.fancybox.pack.js"></script>
-		<script src="js/main.js"></script>
-	</body>
-	</html>
+			</script>
+			<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true"></script>
+			<script src="js/bootstrap.js"></script>
+			<script src="js/bootstrap-select.js"></script>
+			<script src="js/bootstrap-tabcollapse.js"></script> 
+			<script src="js/dzsparallaxer.js"></script> 
+			<script src="js/easy-circle-skill.js"></script>
+			<script src="js/getshar-0.8.0.min.js"></script> 
+			<script src="js/imagesloaded.pkgd.min.js"></script>
+			<script src="js/isotope.pkgd.min.js"></script>
+			<script src="js/jquery.appear.js"></script> 
+			<script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
+			<script src="js/jquery.countTo.js"></script> 
+			<script src="js/jquery.easing.1.3.js"></script> 
+			<script src="js/jquery.mCustomScrollbar.js"></script> 
+			<script src="js/jquery.scrollTo.min.js"></script>
+			<script src="js/jquery.singlePageNav.min.js"></script>
+			<script src="js/jquery.textillate.js"></script> 
+			<script src="js/jquery-asPieProgress.js"></script> 
+			<script src="js/masonry.pkgd.js"></script> 
+			<script src="js/masonry.pkgd.min.js"></script> 
+			<script src="js/owl.carousel.js"></script>
+			<script src="js/responsiveslides.js"></script>
+			<script src="js/sliders.js"></script> 
+			<script src="js/small-icons.js"></script> 
+			<script src="js/jquery.textillate.js"></script>
+			<script src="js/assets/jquery.fittext.js"></script>
+			<script src="js/assets/jquery.lettering.js"></script>
+			<script src="js/fancybox/source/jquery.fancybox.pack.js"></script>
+			<script src="js/main.js"></script>
+		</body>
+		</html>
